sync and update